--- a/package.json
+++ b/package.json
@@ -35,17 +35,17 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.3.2",
+    "qs": "^6.14.0",
+    "rxjs": "^7.8.2",
     "semantic-release": "^24.2.3",
     "typescript": "^5.2.2",
     "typescript-eslint": "^7.13.0",
     "vite": "^5.2.0",
     "vite-plugin-dts": "^3.9.1",
     "vitest": "^2.0.1",
-    "qs": "^6.14.0",
     "zod": "^3.23.8"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "files": [
     "dist"
   ],
