--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,8 @@
     "prettier"
   ],
   "rules": {
-    "@typescript-eslint/no-explicit-any": "off"
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-unused-vars": "off"
   },
   "env": {
     "browser": true,
