--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "vitest": "^2.0.1",
     "zod": "^3.23.8"
   },
-  "dependencies": {},
+  "dependencies": {
+    "uid": "^2.0.2"
+  },
   "files": [
     "dist"
   ],
