--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@semantic-release/npm": "^12.0.1",
     "@types/express": "^5.0.3",
     "@typescript-eslint/eslint-plugin": "^7.13.0",
+    "awilix": "^12.0.5",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
